--- a/package.json
+++ b/package.json
@@ -1,30 +1,76 @@
 {
  
   "name": "ts-mysql-crud",
+ 
   "version": "1.0.0",
+ 
   "main": "index.js",
+ 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/server.ts",
-    "build": "tsc",
-    "dev": "node dist/server.js" 
+ 
+   
+  "test": "echo \"Error: no test specified\" && exit 1",
+ 
+   
+  "start": "ts-node src/server.ts",
+ 
+   
+  "build": "tsc",
+ 
+   
+  "dev": "node dist/server.js"
+ 
   },
+ 
   "keywords": [],
+ 
   "author": "",
+ 
   "license": "ISC",
-  "description": "", 
+ 
+  "description": "",
+ 
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mysql2": "^3.12.0",
-    "nodemon": "^3.1.9",
-    "sequelize": "^6.37.5"
+ 
+   
+  "dotenv": "^16.4.7",
+ 
+   
+  "express": "^4.21.2",
+ 
+   
+  "express-validator": "^7.2.1",
+ 
+   
+  "mysql2": "^3.12.0",
+ 
+   
+  "nodemon": "^3.1.9",
+ 
+   
+  "sequelize": "^6.37.5"
+ 
   },
+ 
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.8",
-    "@types/sequelize": "^4.28.20",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+ 
+   
+  "@types/express": "^5.0.0",
+ 
+   
+  "@types/express-validator": "^3.0.2",
+ 
+   
+  "@types/node": "^22.13.8",
+ 
+   
+  "@types/sequelize": "^4.28.20",
+ 
+   
+  "ts-node": "^10.9.2",
+ 
+   
+  "typescript": "^5.8.2"
+ 
   }
 }
