--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   "scripts": {
  
    
+ 
   "test": "echo \"Error: no test specified\" && exit 1",
- 
-   
+
   "start": "ts-node src/server.ts",
- 
-   
+
   "build": "tsc",
- 
-   
-  "dev": "node dist/server.js"
+
+  "dev": "nodemon --ext ts --exec ts-node src/server.ts"
+
+
+
  
   },
  
@@ -45,6 +46,9 @@
   "mysql2": "^3.12.0",
  
    
+  "nodemailer": "^6.10.0",
+ 
+   
   "nodemon": "^3.1.9",
  
    
@@ -62,6 +66,9 @@
  
    
   "@types/node": "^22.13.8",
+ 
+   
+  "@types/nodemailer": "^6.4.17",
  
    
   "@types/sequelize": "^4.28.20",
