--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
   "scripts": {
  
    
- 
   "test": "echo \"Error: no test specified\" && exit 1",
-
+ 
+   
   "start": "ts-node src/server.ts",
-
+ 
+   
   "build": "tsc",
-
+ 
+   
   "dev": "nodemon --ext ts --exec ts-node src/server.ts"
-
-
-
  
   },
  
@@ -52,7 +51,10 @@
   "nodemon": "^3.1.9",
  
    
-  "sequelize": "^6.37.5"
+  "sequelize": "^6.37.5",
+ 
+   
+  "uuid": "^11.1.0"
  
   },
  
